<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/container"
    style="@style/dialogForm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.habits.edit.BaseDialog"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/formPanel"
        style="@style/dialogFormPanel">

        <LinearLayout
            style="@style/dialogFormRow"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                style="@style/dialogFormLabel"
                android:text="@string/numeric_text"/>

            <EditText
                android:id="@+id/numericalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp">

        <Button
            android:id="@+id/discardButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard"/>

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>